--- a/.github/workflows/python-ci.yml
+++ b/.github/workflows/python-ci.yml
@@ -49,6 +49,8 @@ jobs:
         SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
       with:
         command: test
+        path: app_python
+
 
     - name: Build and Push Docker Image
       uses: docker/build-push-action@v6
